feature: implementacion de endpoint GET de companies y fix en UserSessions->Token
